Closed Bug 27759 Opened 25 years ago Closed 25 years ago

[IMAP] Empty trash breaks trash folder display

Categories

(MailNews Core :: Backend, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rzach, Assigned: jefft)

Details

(Whiteboard: [PDT+] verified)

Empty trash on an IMAP folder breaks being able to display the contents of the trash folder on Linux build 2000.02.14.09 To reproduce: 1. Open IMAP folder 2. File | Empty Trash 3. Select a message 4. Click delete 5. Open Trash folder Actual result: no messages displayed in thread pane Expected result: the message just deleted should show up After restarting the app, the Trash fodler displays fine, and the deleted message is there.
Sounds like a beta1 stopper..
Status: NEW → ASSIGNED
Keywords: beta1
Target Milestone: M14
Whiteboard: [PDT+]
jefft: is this related to either bug 23993 or bug 10208?
Haven't got a chance to look into it. I think it shouldn't be a duplicate of bug 23993 but may be related to bug 10208.
Looks like the message gets copied to the Trash folder is marked as deleted.
Whiteboard: [PDT+] → [PDT+] ETA 2-16-2000
That is not the problem. The problem is we are failing to incorporate downloading the headers from the server. For some reason. m_mdbStore is null which failed the operation.
Fix in hand. Waiting for approval and check in...
Whiteboard: [PDT+] ETA 2-16-2000 → [PDT+] ETA 2-16-2000, fix in hand ready to check in
QA Contact: lchiang → huang
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+] ETA 2-16-2000, fix in hand ready to check in → [PDT+] ETA 2-16-2000, fixed.
Verified on Linux 02-17-08-M14 commercial build: It works for me for both NMS 4.1 & UW12.250 servers....but the Cyrus server not allow me to delete the message...
Cyrus should work too if you can delete messages to trash folder. Does the namespaces set correctly?
I did checked that the UI & prefs.js with the personal namespace setup. Should I still need to remove lines from the prefs.js file for the migrated profile? I will try that if remove those lines since I remembered that you said that I don't need to remove those lines anymore!!
Let's make things a little bit simpler. Test on a Cryus profile that allow you to delete messages to the trash folder and then follow the zach's steps. It should work if you can delete messages to the trash folder.
It's no useful after I removed some specific lines from prefs.js for the migrated profile....still have problem for the migrated profiles. - there was logged & known bug already. Anyway, I verified on the new account already. Yes!! It passed!!Marking as verified for this bug!!
Status: RESOLVED → VERIFIED
Whiteboard: [PDT+] ETA 2-16-2000, fixed. → [PDT+] verified
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.