fixed bug 27759 -- Empty Trash breaks trash folder display; r=bienvenu,a=phil,chofmann