mailnews/imap/src/nsImapMailFolder.h
@@ -120,7 +120,7 @@ public:
     
     NS_IMETHOD ForceDBClosed();
     NS_IMETHOD Compact();
-    NS_IMETHOD EmptyTrash();
+    NS_IMETHOD EmptyTrash(nsIMsgWindow *msgWindow);
 	NS_IMETHOD Delete ();
 	NS_IMETHOD Rename (const PRUnichar *newName);
 	NS_IMETHOD Adopt(nsIMsgFolder *srcFolder, PRUint32 *outPos);
